--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/cli": "^2.30.0",
     "@sanity/base": "^2.30.1",
     "@sanity/core": "^2.30.1",
     "@sanity/default-layout": "^2.30.1",
